добавление работы с картинками, добавление страницы выбранной книги и т.д.

--- a/package.json
+++ b/package.json
@@ -19,12 +19,20 @@
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/material": "^6.4.7",
+    "@angular/material-moment-adapter": "^6.4.7",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ngrx/entity": "^6.1.0",
     "@ngrx/store": "^6.1.0",
+    "@ngrx/store-devtools": "^6.1.0",
+    "angular2-uuid": "^1.1.1",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "isbn-validate": "^1.0.3",
+    "moment": "^2.22.2",
+    "ngrx-store-localstorage": "^5.1.0",
+    "npm": "^6.4.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
@@ -35,7 +43,7 @@
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
