--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "isbn-validate": "^1.0.3",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ngrx-store-localstorage": "^5.1.0",
     "npm": "^6.4.1",
